--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
             <div class="container">
 
                 <div class="resume__block">
-                    <h1 class="contact-info__header">Bulka</h1>
-                    <h3 class="contact-info__sub-header">Senior Hooman Manager</h3>
+                    <h1 class="contact-info__header">Mykola</h1>
+                    <h3 class="contact-info__sub-header">.NET developer</h3>
 
                     <div class="contact_info_container fh">
                         <div class="contact-info__block">
@@ -29,7 +29,7 @@
                                         </path>
                                     </svg>
                                 </div>
-                                <span>Lviv, Ukraine</span>
+                                <span>Dnipro, Ukraine</span>
                             </a>
                         </div>
 
@@ -39,8 +39,7 @@
 
                         <div class="contact-info__block">
 
-                            <a href="https://ua.linkedin.com/company/binary-studio_241166" rel="author"
-                                class="contact-info__item">
+                            <a href="nkedin.com/in/nick-taraskin-0ab81815b/" rel="author" class="contact-info__item">
                                 <div class="contact-info__item-icon-wrapper">
                                     <svg class="contact-info__item-icon" xmlns="http://www.w3.org/2000/svg"
                                         viewBox="0 0 448 512">
@@ -49,7 +48,7 @@
                                         </path>
                                     </svg>
                                 </div>
-                                <span>binary-studio</span>
+                                <span>Nick Taraskin</span>
                             </a>
                         </div>
 
@@ -67,9 +66,7 @@
                             </svg>
                         </div>
                         <p class="intro_text">Meow.
-                            I am a Binary Studio cat. Still got 7 lives. Work in IT, Full Stack Evil,
-                            all I do is sleep and try to help out hoomans with their projects whenever
-                            they need me.
+                            Hi. My name is Mykola.
                         </p>
                     </div>
                 </div>
@@ -78,7 +75,15 @@
                 <div class="resume__block">
                     <div class="skills">
                         <h3 class="skills__header">Skills</h3>
-                        <p class="skills__text">Sleep, eat, more sleep, meow, mrrr, purr. </p>
+                        <p class="skills__text">
+                            ‒ OOP;
+                            ‒ C#;
+                            ‒ ASP.NET Core API;
+                            ‒ Entity Framework;
+                            ‒ Dapper;
+                            ‒ ADO.NET;
+                            ‒ LINQ.
+                        </p>
                     </div>
                 </div>
             </div>
@@ -96,13 +101,13 @@
                                     </div>
 
                                     <div class="experiences__company-project">
-                                        <span class="experiences__company-project-role">Binary Studio Cat</span>
+                                        <span class="experiences__company-project-role">Junior developer</span>
                                         <h3 class="experiences__company-project-name">Hooman project</h3>
                                         <ul class="experiences__company-project-responsibilities">
-                                            <li>Supported hoomans</li>
-                                            <li>Slept all the time</li>
-                                            <li>Lied on the keyboard</li>
-                                            <li>Watched my hoomans working</li>
+                                            <li>Create api for mobile apps;</li>
+                                            <li>Also involved in testing and implementation of the mobile apps.</li>
+                                            <li>Bug fixing;</li>
+                                            <li>New functionality development</li>
                                         </ul>
                                     </div>
                                 </div>
@@ -114,22 +119,21 @@
                                 <div class="additional-info__education">
                                     <h3 class="additional-info__education-header">Education</h3>
                                     <div class="additional-info__education-university">
-                                        <span class="additional-info__education-university-durability">2021</span>
-                                        <h3 class="additional-info__education-university-speciality">Cat track</h3>
-                                        <p class="additional-info__education-university-name">Binary Studio Academy</p>
+                                        <span class="additional-info__education-university-durability">2009</span>
+                                        <h3 class="additional-info__education-university-speciality">Systems Engineer
+                                        </h3>
+                                        <p class="additional-info__education-university-name">Dnipropetrovsk National
+                                            University (Dnipro)</p>
                                     </div>
                                 </div>
 
                                 <div class="additional-info__languages">
                                     <h3 class="additional-info__languages-header">Languages</h3>
                                     <p class="additional-info__languages-item">
-                                        Meow dialect
-                                    </p>
-                                    <p class="additional-info__languages-item">
                                         Ukrainian (understand)
                                     </p>
                                     <p class="additional-info__languages-item">
-                                        English (don't understand)
+                                        English (understand)
                                     </p>
                                 </div>
                             </div>
